--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -20,10 +20,11 @@ body {
     display: flex; /* Flexbox para alinhar os itens */
     align-items: center; /* Alinha verticalmente os itens no centro */
     justify-content: space-between; /* Espaça os itens */
-    margin-bottom: 1px;
+    margin: 0;
     padding: 20px;
+    box-sizing: border-box;
+    width: 100%;
     background-color: #722F37;
-    width: 100%; /* Garantir que ocupe toda a largura da tela */
 }
 
 .logo-wrapper {
@@ -60,10 +61,10 @@ a:hover {
 a {
     color: rgb(225, 224, 224);
     text-decoration: none;
-    font-size: 15px;
     text-align: center;
     margin: 0;
     padding: 0;
+    font-size: 18px;
 }
 
 .cardapio, .contato, .sobre{
@@ -100,7 +101,7 @@ a {
 }
 
 .chat-header {
-    background-color: #4d1313;
+    background-color: #6c2121;
     color: white;
     text-align: center;
     padding: 15px;
@@ -228,6 +229,8 @@ hr {
     justify-content: space-between; /* Espaça os itens */
     margin-bottom: 01px;
     padding: 10px;
+    box-sizing: border-box;
+    width: 100%;
     background-color: #722F37;
 }
 
