--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,6 +10,10 @@ body {
     font-family: 'Arial', sans-serif;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
 .overlay {
     display: flex;
     justify-content: center;
@@ -115,8 +119,8 @@ button:hover {
     display: flex; /* Flexbox para alinhar os itens */
     align-items: center; /* Alinha verticalmente os itens no centro */
     justify-content: space-between; /* Espaça os itens */
-    margin-bottom: 1px;
-    padding: 20px;
+    margin-bottom: 2px;
+    padding: 0px;
     background-color: #722F37;
 }
 
@@ -175,13 +179,13 @@ a:hover {
 a {
     text-decoration: none;
     color: #722F37;
-    font-weight: bold;
     padding: 10px;
     margin: 10px;
     display: inline-block;
     border: 1px solid transparent;
     border-radius: 5px;
     transition: all 0.3s ease;
+    font-size: 18px;
 }
 
 .disabled-link {
@@ -199,14 +203,12 @@ a {
 .sobre {
     position: relative;
     margin-left: 0; /* Remova o grande deslocamento para a esquerda */
-    font-size: 18px;
     text-align: center; /* Centraliza o texto */
 }
 
 .contato {
     position: relative;
     margin-right: 0px;
-    font-size: 18px;
 }
 
 h1 {
@@ -342,6 +344,9 @@ p {
     position: relative;
     display: inline-block; /* Para ajustar ao layout */
     width: 300px; /* Tamanho do rótulo */
+    transform: translateY(-100px); /* Inicialmente um pouco abaixo, para "descer" */
+    opacity: 100%; /* Inicialmente invisível */
+    transition: opacity 0.8s ease, transform 0.8s ease; /* Transições suaves */
 }
 
 .rotulo img {
