--- a/templates/contato.html
+++ b/templates/contato.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="../static/css/responder.css">
     <link rel="stylesheet" href="../static/css/rodape.css">
     <link rel="stylesheet" href="../static/css/botao.css">
+    <link rel="stylesheet" href="../static/css/cabecalho.css">
     <link rel="icon" href="../static/img/Logo-1.png" type="image/x-icon">
 </head>
 <body>
     <div class="logo-container">
         <div>
             <a href="{{ url_for('inicial') }}">
-                <img href="/" class="logo" src="{{ url_for('static', filename='img/Logo_page-0001.jpg') }}">
+                <img href="/" class="logo" src="../static/img/logo.png">
             </a>
         </div>
         <div class="menu-toggle" id="mobile-menu">
@@ -25,7 +26,7 @@
         <ul class="nav-list">
             <li><a href="{{ url_for('inicial') }}" class="sobre">Sobre a divinno</a></li>
             <div class="separator"></div>
-            <li><a href="{{ url_for('cardapio') }}" class="cardapio">Cardapio</a></li>
+            <li><a href="{{ url_for('cardapio') }}" class="sobre">Cardápio</a></li>
         </ul>
     </div>
 
@@ -71,7 +72,7 @@
     <div class="logo-content-rodape">
         <div>
             <a href="{{ url_for('inicial')}}">
-                <img href="/" class="logo-rodape" src="{{ url_for('static', filename='img/Logo_page-0001.jpg') }}">
+                <img href="/" class="logo-rodape" src="../static/img/logo.png">
             </a>
         </div>
         <div class="visivel">
@@ -82,11 +83,9 @@
             </div>
         </div>
     </div>
-
 </body>
 
 <script>
-
         window.onbeforeunload = function () {
             window.scrollTo(0, 0);
         };
